refactoring [python] Remove unreachable code in `PySyntheticCallHelper`
GitOrigin-RevId: e75ae448717c7fdb13f1ac1e759f119f50dc3f4b